--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ table
 	border:2px solid black;
 	text-align:center;
 }
+#tableP
+{
+	width:100%;
+	height:100%;
+	margin:auto;
+}
 #table1
 {
 	margin:auto;
